<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_call_service"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/shake"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintBottom_toTopOf="@id/button_manually_call_service"/>

    <Button
        android:id="@+id/button_manually_call_service"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_call_service"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_button"
        android:text="@string/call_service"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_call_service" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/shake"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_view_call_service"
        />

</androidx.constraintlayout.widget.ConstraintLayout>